# odtp

./: .env.compose.dist  .env.dist  .env.dist.compose  .env.dist.compose.dev  .env.dist.dev  .env.dist.local  .gitignore  CHANGELOG.md  CLAC.txt  CLAI.txt  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  compose.yml  cookies.txt  credentials.json  d  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-reporting.md  custom.md  feature-request.md
bench/: odtp-compose.yml  odtpDB.json  run_initial_setup.ipynb  run_initial_setup.py
odtp/: CHANGELOG.md  __init__.py  authentication.py  barfi.py  cli.py  cmd.txt  config.ini  db.py  git.py  initial_setup.py  main.py  models.py  results.py  run.py  setup.py  storage.py  workflow.py
odtp/.streamlit/: pages.toml
odtp/cli/: component.py  dashboard.py  db.py  execution.py  main.py  middleware.py  new.py  result.py  s3.py  setup.py
odtp/dashboard/: main.py  page_components.py  page_start.py  page_users.py  ui_menu.py  ui_stepper.py  ui_theme.py  utils_mongodb.py
odtp/dashboard/forms/: parameters.py  ports.py  workflow.py
odtp/dashboard/page_about/: checks.py  homepage.py  main.py
odtp/dashboard/page_components/: add.py  add_component_version.py  add_form.py  detail copy.py  detail.py  info.py  main.py  options.py  table.py  version_detail.py  version_info.py  version_table.py
odtp/dashboard/page_digital_twins/: add.py  main.py  select.py  storage.py  table.py  validation.py  workarea.py
odtp/dashboard/page_executions/: add.py  add2.py  detail.py  helpers.py  main.py  parameters_form.py  parameters_form_step.py  ports_form.py  projectdir.py  run.py  select.py  storage.py  table.py  test.md  validation.py  workarea.py  workflow_form.py
odtp/dashboard/page_run/: folder.py  helpers.py  main.py  new_workarea.py  run.py  run2.py  secrets.py  workarea.py
odtp/dashboard/page_users/: add.py  main.py  select.py  storage.py  validation.py  workarea.py  workdir.py
odtp/dashboard/page_workflows/: add.py  detail.py  main.py  table.py
odtp/gui/: app.py  components.py  datavis.py  db.py  digitaltwins.py  init.py  logs.py  results.py  runs.py  semantics.py  servinit.py  snapshots.py  users.py  workflow.py
odtp/helpers/: environment.py  filesystem.py  git.py  middleware.py  models.py  parse.py  secrets.py  settings.py  utils.py  validation.py
odtp/mongodb/: db.py  utils.py
odtp/schemas/: users.json
tests/: test_db.py
(+21 files in other folders)
