[tool.poetry]
name = "odtp"
version = "0.3.0"
description = "A tool to deploy and manage open digital twins"
authors = ["caviri <carlosvivarrios@gmail.com>", "sabinem <sabine.maennel@sdsc.ethz.ch>"]
license = "AGPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.5.2"
typer = "0.9.0"
pymongo = ">=4.6.3"
python-dotenv = "^1.0.0"
boto3 = "^1.33.13"
nicegui = "1.4.24"
directory-tree = "^0.0.4"
pyarrow = "13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = ">=24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
odtp = "odtp.cli.main:app"
