[tool.poetry]
name = "odtp"
version = "0.4.0"
description = "A tool to deploy and manage open digital twins"
authors = ["caviri <carlosvivarrios@gmail.com>", "sabinem <sabine.maennel@sdsc.ethz.ch>", "sabrinaossey <sabrina.ossey@epfl.ch>", "rmfranken <robin.franken@epfl.ch>"]
license = "AGPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
pydantic = "2.5.2"
numpy = "1.26.4"
typer = "0.9.0"
pymongo = ">=4.6.3"
python-dotenv = "^1.0.0"
boto3 = "^1.33.13"
nicegui = "1.4.24"
directory-tree = "^0.0.4"
docker = "7.1.0"
python-slugify = "^8.0.4"
pandas = "^2.2.2"
prettytable = "3.10.0"

cryptography = "^44.0.0"
rich = "^13.9.4"
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = ">=24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
odtp = "odtp.cli.main:app"